hr-simulator/assets/styles/simulator.css
/* ... */
table {
    border: 0;
    font-family: Arial, sans-serif;
    font-size: 11px
}

table.price-table th {
    color: #7F7F7F;
    padding: 4px 0;
    vertical-align: bottom
}

table.price-table .th-no-padding {
    padding: 0
}

table.betslip-table td {
    border-bottom: 1px solid white;
    border-left-width: 0;
    border-right-width: 0;
    border-top-width: 0;
    padding: 5px;
    vertical-align: middle
}

table.betslip-table th {
    border: 0;
    padding: 5px;
    vertical-align: middle
}

table.price-table .back-header, table.price-table .lay-header {
    width: 49px
}

table.price-table .back-header, table.price-table .lay-header, table.price-table .matched-header {
    color: black;
    font-weight: 700
}

table.price-table .matched-header {
    background-color: #F3F3F3;
    border-radius: 2px;
    box-sizing: border-box;
    padding: 6px 8px;
    text-align: left;
    white-space: nowrap
}

.market-view-container {
    background-color: white;
    margin-bottom: 10px;
    padding: 10px;
    position: relative
}

.market-view-container .runner-name-cell {
    border-bottom: 1px solid #DFDFDF;
    padding: 4px 0;
    padding-right: 8px;
    text-align: left
}

.market-view-container .runner-name-cell-first {
    border-top: 1px solid #DFDFDF
}

.market-view-container .runner-name {
    display: inline-block;
    font-weight: bold;
    max-width: 135px;
    min-height: 12px;
    overflow: hidden;
    padding-left: 4px;
    text-align: left;
    text-overflow: ellipsis;
    vertical-align: middle;
    white-space: nowrap
}

.market-view-container .price-cell {
    border-bottom: 1px solid white;
    border-right: 1px solid white;
    box-sizing: border-box;
    height: 32px;
    padding: 4px 0;
    text-align: center;
    vertical-align: middle;
    width: 49px
}

.market-view-container .price-cell:hover {
    cursor: pointer
}

.market-view-container .price-cell-first {
    border-left: 0
}

.market-view-container .inplay-container {
    display: inline-block;
    height: 15px;
    text-align: left;
    width: 50%
}

.market-view-container .matched-container {
    display: inline-block;
    height: 15px;
    text-align: right;
    width: 50%
}

.market-view-container .matched-label {
    line-height: 15px
}

.market-view-container .inplay-label, .market-view-container .going-inplay-label, .market-view-container .is-inplay-icon, .market-view-container .going-inplay-icon {
    display: inline-block;
    vertical-align: middle
}

.market-view-container .inplay-label, .market-view-container .going-inplay-label {
    margin-left: 8px;
}

.market-view-container .inplay-label {
    color: green;
}

.market-view-container .is-inplay-icon {
    background: transparent url("../images/inplay-icon-active.png") 1px 0px no-repeat;
    height: 15px;
    width: 15px;
    padding-left: 1px;
}

.market-view-container .going-inplay-icon {
    background: transparent url("../images/inplay-icon.png") no-repeat;
    height: 15px;
    width: 15px
}

.market-view-container .odd {
    font-size: 11px;
    font-weight: 700;
    line-height: 12px
}

.market-view-container .prices {
    font-size: 11px
}

.market-view-container .price {
    font-weight: 700;
    line-height: 15px
}

.market-view-container .back {
    background-color: #54b3ff
}

.market-view-container .back:hover {
    background-color: #4ba1e5
}

.market-view-container .lay {
    background-color: #f996ab
}

.market-view-container .lay:hover {
    background-color: #e08598
}

.market-view-container .back-flash {
    animation: flashBack 0.5s forwards linear normal;
    -moz-animation: flashBack 0.5s forwards linear normal;
    -o-animation: flashBack 0.5s forwards linear normal;
    -webkit-animation: flashBack 0.5s forwards linear normal
}

.market-view-container .lay-flash {
    animation: flashLay 0.5s forwards linear normal;
    -moz-animation: flashLay 0.5s forwards linear normal;
    -o-animation: flashLay 0.5s forwards linear normal;
    -webkit-animation: flashLay 0.5s forwards linear normal
}

.market-view-container .peripheral-price {
    background-color: #E3E8E8
}

.market-view-container .peripheral-price:hover {
    background-color: #C8C8C8
}

.right {
    text-align: right
}

.left {
    text-align: left
}

.left.betslip-header-cell {
    padding: 0 2px 0 8px
}

.center {
    border: solid 1px white;
    border-collapse: collapse;
    text-align: center
}

.padding {
    visibility: collapse
}

.horseanimation {
    transition: right 2s ease-in-out;
    -moz-transition: right 2s ease-in-out;
    -ms-transition: right 2s ease-in-out;
    -o-transition: right 2s ease-in-out;
    -webkit-transition: right 2s ease-in-out
}

.horse {
    display: block;
    height: 40px;
    position: absolute
}

.silks {
    left: 30px;
    position: absolute;
    top: 0px
}

.simulator-content {
    background-size: 100%;
    height: 465px;
    overflow: hidden;
    position: relative;
    width: 700px
}

@keyframes move-environment {
    100% {
        background-position: -700px 0
    }
}

@-webkit-keyframes move-environment {
    100% {
        background-position: -700px 0
    }
}

@keyframes move-left {
    0% {
        transform: translateX(0)
    }
    100% {
        transform: translateX(-1000px)
    }
}

@-webkit-keyframes move-left {
    0% {
        -webkit-transform: translateX(0)
    }
    100% {
        -webkit-transform: translateX(-1000px)
    }
}

.move-environment {
    animation: move-environment 2s linear infinite;
    -webkit-animation: move-environment 2s linear infinite;
    -webkit-transform: translate3d(0, 0, 0);
    -webkit-transform-style: preserve-3d
}

.move-environment-quick {
    animation: move-left 6s linear infinite;
    -webkit-animation: move-left 6s linear infinite;
    -webkit-transform: translate3d(0, 0, 0);
    -webkit-transform-style: preserve-3d
}
/* ... */

